# opentainer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.demo.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
demo/: docker-compose.ecommerce.yml  docker-compose.enterprise.yml  docker-compose.homeserver.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: docker_lifecycle.rs  lib.rs  main.rs  tests.rs
src/components/: ContainerDrawer.tsx  ContainerItem.tsx  ContainerList.tsx  DockerStatus.tsx  ExecView.tsx  ImageList.tsx  Layout.tsx  LogsView.tsx  NetworkList.tsx  SearchInput.tsx  Settings.tsx  SummaryView.tsx  VolumeList.tsx
src/components/__tests__/: ContainerItem.test.tsx
src/context/: ThemeContext.tsx
src/hooks/: useBatchContainerStats.ts  useContainers.ts  useImages.ts  useNetworks.ts  useSortable.ts  useVolumes.ts
src/hooks/__tests__/: useSortable.test.ts
src/lib/: api.ts  terminalTheme.ts
src/lib/__tests__/: terminalTheme.test.ts
src/styles/: global.css  variables.css
src/test/: setup.ts
src/types/: byte-size.d.ts  index.ts
