[package]
name = "opentainer"
version = "0.0.3"
description = "A modern, high-performance desktop container management application."
authors = ["Zahid Cakici"]
edition = "2021"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "opentainer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
bollard = "0.20.1"
tauri-plugin-opener = "2.5.3"

# Optimize for fast rebuilds during development
[profile.dev]
incremental = true

# Optimize for smaller binary size in release builds
[profile.release]
lto = "thin"          # Link-time optimization (good balance)
opt-level = "s"       # Optimize for size while keeping good performance
strip = "symbols"     # Remove debug symbols (~30-50% smaller)
codegen-units = 1     # Better optimization (slower compile, worth it for release)
panic = "abort"       # ~10% smaller, no stack unwinding
